# coding-guardrails

./: .gitignore  CLAUDE.md  Dockerfile  HISTORY.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
.pi/: scratch-pad.json
configs/: aider.yaml  claude-code.yaml  guardrail-config.yaml  opencode.json  pi.yaml
docs/: agents.md  architecture.md  models.md  rules.md  server.md
eval/scenarios/: command_git_clean.json  command_sudo.json  destructive_format_disk.json  destructive_rm_rf.json  edit_without_read.json  network_metadata_ssrf.json  network_safe_localhost.json  path_traversal_shadow.json  safe_edit_project_file.json  sensitive_safe_project_file.json
patches/pi-subagents/: 01-lenient-acceptance-parser.patch  02-stronger-acceptance-prompt.patch  03-stronger-finalization-prompt.patch  04-prefer-acceptance-message.patch  05-acceptance-schema-tolerance.patch  README.md  apply-patches.sh  test-acceptance-parser.mjs  test-get-final-output.mjs  test-real-world.mjs
reports/: 2026-06-08_qwen-vs-gemma-ab.md  2026-06-08_qwen-vs-gemma-revalidation.md  2026-06-27_ornith-assessment.md
src/coding_guardrails/: __init__.py  __main__.py  cli.py  config.py  eval.py  middleware.py
src/coding_guardrails/eval/scenarios/: command_eval_curl.json  edit_without_read.json  path_traversal_read_etc_passwd.json  safe_read_project_file.json  secret_aws_key_in_args.json  secret_private_key_write.json  sensitive_ci_workflow.json  sensitive_env_nudge.json  sensitive_git_config.json
src/coding_guardrails/models/: profiles.py  registry.py
src/coding_guardrails/proxy/: acceptance.py  client.py  handler.py  layer1.py  server.py
src/coding_guardrails/rules/: __init__.py  base.py  commands.py  dup_write.py  lint.py  loop_detection.py  network.py  path_safety.py  prerequisites.py  secrets.py  sensitive_files.py  sequencing.py  session_budget.py  thoroughness.py  tool_resolution.py  value_fidelity.py
src/coding_guardrails/server/: __init__.py  build.py  cli.py  download.py  launcher.py  manager.py  manager_vram.py  paths.py  sources.py  version.py
tests/: integration-subagent-smoke.sh  test_backend_manager.py
tests/integration/: test_proxy.py  test_proxy_pipeline.py
tests/unit/: conftest.py  test_acceptance_prefill.py  test_acceptance_wrap.py  test_commands.py  test_config.py  test_dup_write.py  test_fuzz.py  test_lint.py  test_loop_detection.py  test_loop_session_reset.py  test_middleware.py  test_network.py  test_path_safety.py  test_paths.py  test_prerequisites.py  test_secrets.py  test_sensitive_files.py  test_sequencing.py  test_server.py  test_session_budget.py  test_sources.py  test_text_passthrough.py  test_thoroughness.py  test_tool_resolution.py
