[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-guardrails"
version = "0.9.0"
description = "Safe, reliable local coding agent proxy. Forge (rescue, retry, thinking capture) + 11 composable guardrail rules. 93% on Forge eval."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Stawils"}]
readme = "README.md"
keywords = ["llm", "tool-calling", "agents", "guardrails", "coding", "local-models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "forge-guardrails>=0.7.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "pytest-asyncio>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/stawils/coding-guardrails"
Repository = "https://github.com/stawils/coding-guardrails"
Issues = "https://github.com/stawils/coding-guardrails/issues"
Changelog = "https://github.com/stawils/coding-guardrails/releases"

[project.scripts]
coding-guardrails = "coding_guardrails.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-hypothesis",
    "hypothesis",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coding_guardrails"]
artifacts = ["src/coding_guardrails/eval/scenarios/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live llama-server",
]

[tool.ruff]
target-version = "py312"
line-length = 100
